# ai-voice-therapist-backend

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: chat.py  main.py  stt.py  tts.py
app/infra/: config.py
app/routers/: ws_chat.py
app/services/: __init__.py  chat.py  stt.py  tts.py
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  Improvements-&-Future-Plans.md
scripts/: dev.sh
