[project]
name = "voice-therapist-server"
version = "0.1.0"
description = "FastAPI backend for Voice Therapist MVP"
authors = [{ name = "Voice Therapist Team" }]
requires-python = ">=3.10"

# Runtime dependencies
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "litellm>=1.74.0", # optional, used in tts.py
    "openai[voice-helpers]>=1.30.0",
    "python-multipart>=0.0.20",
    "numpy>=2.2.6",
    "requests>=2.32.0",
    "deepgram-sdk>=4.6.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

